<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- use always instead of ifRoom, otherwise it can disappear -->
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_action_bar_24dp"
        android:title="@string/action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_open_website"
        android:title="@string/action_open_website"
        app:showAsAction="never"/>

</menu>