<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/prices_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp">

    <LinearLayout
        android:id="@+id/category_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_price"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/new_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_info"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/older_new_prices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/no_info"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_used"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/used_price"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/used_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_info"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/older_used_prices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/no_info"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_digital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/digital_price"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/digital_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_info"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/older_digital_prices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/no_info"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_preorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preorder_price"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/preorder_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_info"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/older_preorder_prices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/no_info"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>